Add bigram code

--- a/makemore.ipynb
+++ b/makemore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnkQU1pu2kJyYQZaFQiduX",
+      "authorship_tag": "ABX9TyOMJZRrfN/0tJZ+pv1Rq0Qj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HvmXTrbV5RxI",
-        "outputId": "0356b5d0-18de-400d-8e1e-63bbaeccf5e1"
+        "outputId": "ad8224c4-e56f-407a-8c54-ce222c4a98c3"
       },
       "execution_count": 2,
       "outputs": [
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uwd4zR-Q5opx",
-        "outputId": "01ff11bc-42f7-416a-ca66-e9ed8d4c344a"
+        "outputId": "1ecfe4c4-d320-4b44-c1d7-f6c451fadf49"
       },
       "execution_count": 3,
       "outputs": [
@@ -119,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zj3mmTLQ5pzR",
-        "outputId": "9a0b5073-9641-42c6-f2bd-befe4e7ef03e"
+        "outputId": "760a683e-a805-4195-9af6-f359d40fa368"
       },
       "execution_count": 4,
       "outputs": [
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJ6xDTll-wOX",
-        "outputId": "96f8b773-b4c0-4a69-e8b9-296e228affbc"
+        "outputId": "43098cf9-588f-4e85-c8c4-e886c463f83e"
       },
       "execution_count": 6,
       "outputs": [
@@ -224,7 +224,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af022f25-f620-407e-c5ef-f686327d1c09"
+        "outputId": "e9090fd8-2cff-4218-adec-e0f3999cf94c"
       },
       "execution_count": 9,
       "outputs": [
@@ -305,7 +305,7 @@
           "height": 1000
         },
         "id": "7MuEl1tNCpDy",
-        "outputId": "e50e7c73-95aa-48f9-e873-4589befdbc0b"
+        "outputId": "8c670f8e-9344-40fb-8562-5d4346e984cb"
       },
       "execution_count": 11,
       "outputs": [
@@ -331,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKGirjJlwmEQ",
-        "outputId": "6ae330e7-5d84-48b5-f83f-e92f358c31c1"
+        "outputId": "e7ba30c7-4b3a-45d4-9231-16b13a7d65a5"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGQaoEBB-YUt",
-        "outputId": "5d08eb13-b90a-4226-ae84-af20687f3f8c"
+        "outputId": "ae31b3f7-0f74-4510-df04-ca4a20dcd974"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 13
         }
       ]
     },
@@ -387,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gAXKxf6yaL2",
-        "outputId": "9bdd3f72-934c-4b22-99dd-a7644698dcc1"
+        "outputId": "ae1c86e4-8d7a-45b3-b22a-bebc67775d76"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -423,9 +423,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XS9CQUgYAoks",
-        "outputId": "515380f6-18a5-4b63-a3a5-a24afae44d66"
+        "outputId": "0f542f2a-95e0-4189-d443-2e5e84f0db85"
       },
-      "execution_count": 24,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,49 +437,168 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 15
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Now I want to generate a letter based on the previous letter generated.\n",
-        "I have a tensor which each row"
-      ],
-      "metadata": {
-        "id": "4WJAdZM6AUTJ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "fjoyltyDAJEx"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "P = (N+1).float()\n",
-        "P = P / P.sum(1, keepdims=True)"
+        "p"
       ],
       "metadata": {
-        "id": "q9x4H-UM3Pk4"
+        "id": "z2CYcxBmcoXD",
+        "outputId": "b52079e4-fbe4-4346-c491-4648fd7264a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0000, 0.1377, 0.0408, 0.0481, 0.0528, 0.0478, 0.0130, 0.0209, 0.0273,\n",
+              "        0.0184, 0.0756, 0.0925, 0.0491, 0.0792, 0.0358, 0.0123, 0.0161, 0.0029,\n",
+              "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Our bigram model\n",
+        "g = torch.Generator().manual_seed(2147483647)\n",
+        "ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
         "\n",
+        "itos[ix]"
+      ],
+      "metadata": {
+        "id": "MdSKtGadbXku",
+        "outputId": "4beede38-95cc-40f0-d307-c08ff23cc758",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'j'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g = torch.Generator().manual_seed(2147483647)\n",
+        "p = torch.rand(3, generator = g)\n",
+        "p = p / p.sum()\n",
+        "p"
+      ],
+      "metadata": {
+        "id": "FFlK641RavIn",
+        "outputId": "566c09da-a2ff-40ed-f90c-24e756b07c41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.6064, 0.3033, 0.0903])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.multinomial(p, num_samples = 100, replacement = True, generator = g)"
+      ],
+      "metadata": {
+        "id": "T6s2VRSaXcX3",
+        "outputId": "ab498bdd-64c5-42ea-bc41-aad9a149965d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 1, 2, 0, 0, 2, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 2, 0, 0,\n",
+              "        1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1,\n",
+              "        0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+              "        0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 1, 0,\n",
+              "        0, 1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g = torch.Generator().manual_seed(2147483647)\n",
+        "\n",
+        "out = []\n",
+        "ix = 0\n",
+        "while True:\n",
+        "  p = N[ix].float()\n",
+        "  p = p / p.sum()\n",
+        "  ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+        "  out.append(itos[ix])\n",
+        "  if ix == 0:\n",
+        "    break\n",
+        "\n",
+        "  print(itos[ix], end='')"
+      ],
+      "metadata": {
+        "id": "MYxqwkR-bU94",
+        "outputId": "b4e4e474-72ae-4216-cfc8-1d794c854363",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "junide"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "g = torch.Generator().manual_seed(2147483647)\n",
         "\n",
         "for i in range(10):\n",
@@ -492,16 +611,17 @@
         "    out.append(itos[ix])\n",
         "    if ix == 0:\n",
         "      break\n",
+        "\n",
         "  print(''.join(out))"
       ],
       "metadata": {
+        "id": "gHajH6IJdOzH",
+        "outputId": "64ad2ca9-5c0e-453f-8659-be68939115a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "myQz7Vqd2Nqj",
-        "outputId": "bf599a09-0f2f-463d-e3bb-7bf09bb5c4aa"
+        }
       },
-      "execution_count": 15,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,6 +640,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fjoyltyDAJEx"
+      }
     }
   ]
 }
