--- a/makemore.ipynb
+++ b/makemore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMJZRrfN/0tJZ+pv1Rq0Qj",
+      "authorship_tag": "ABX9TyNKXUpQCFhIUFIMzG+KrNfz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Setup"
+        "## Building a Biagram Model"
       ],
       "metadata": {
         "id": "ks7RQ55E6gvR"
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 43,
       "metadata": {
         "id": "2aZ4S-goqKne"
       },
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HvmXTrbV5RxI",
-        "outputId": "ad8224c4-e56f-407a-8c54-ce222c4a98c3"
+        "outputId": "43cedd17-b334-42ec-c403-8934c2f2c04b"
       },
-      "execution_count": 2,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 44
         }
       ]
     },
@@ -91,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uwd4zR-Q5opx",
-        "outputId": "1ecfe4c4-d320-4b44-c1d7-f6c451fadf49"
+        "outputId": "1f7a1466-4b12-49d5-a29f-c00f3fa46877"
       },
-      "execution_count": 3,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 45
         }
       ]
     },
@@ -119,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zj3mmTLQ5pzR",
-        "outputId": "760a683e-a805-4195-9af6-f359d40fa368"
+        "outputId": "06d6587a-49fe-486a-89eb-5ea089ea934c"
       },
-      "execution_count": 4,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "tYsJmiOQ8Zdo"
       },
-      "execution_count": 5,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJ6xDTll-wOX",
-        "outputId": "43098cf9-588f-4e85-c8c4-e886c463f83e"
+        "outputId": "1446e198-0453-4bd4-842e-48c1452c114e"
       },
-      "execution_count": 6,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 48
         }
       ]
     },
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "5K-amPMjAkjp"
       },
-      "execution_count": 7,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "KWyrakIV_GK5"
       },
-      "execution_count": 8,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9090fd8-2cff-4218-adec-e0f3999cf94c"
+        "outputId": "e04a0951-7ab6-42fe-fef4-411fdbd63a2a"
       },
-      "execution_count": 9,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 51
         }
       ]
     },
@@ -279,7 +279,7 @@
       "metadata": {
         "id": "nltKQvpwBkQH"
       },
-      "execution_count": 10,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -305,9 +305,9 @@
           "height": 1000
         },
         "id": "7MuEl1tNCpDy",
-        "outputId": "8c670f8e-9344-40fb-8562-5d4346e984cb"
+        "outputId": "1d114344-f51a-4687-86f4-673e22e922a9"
       },
-      "execution_count": 11,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKGirjJlwmEQ",
-        "outputId": "e7ba30c7-4b3a-45d4-9231-16b13a7d65a5"
+        "outputId": "ccf2a8b7-1550-4758-e833-8ce860137461"
       },
-      "execution_count": 12,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 54
         }
       ]
     },
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGQaoEBB-YUt",
-        "outputId": "ae31b3f7-0f74-4510-df04-ca4a20dcd974"
+        "outputId": "1915cb5c-2c3c-4d33-d052-709ffeead5ef"
       },
-      "execution_count": 13,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 55
         }
       ]
     },
@@ -387,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gAXKxf6yaL2",
-        "outputId": "ae1c86e4-8d7a-45b3-b22a-bebc67775d76"
+        "outputId": "6c546339-351c-4226-9c5a-faf777ae0117"
       },
-      "execution_count": 14,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,71 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "P = N.float()\n",
-        "P_rows_sum = P.sum(1, keepdims=True) # Sums all values in each rows, keeps the dimention same\n",
-        "P = P / P_rows_sum # Divides the each value (number of occurance) in the tensor by the P_rows_sum: sum of the each row individually.\n",
-        "\n",
-        "\"\"\"\n",
-        "This is what we've done previousl, but this time we did it to each row.\n",
-        "We now have a probability distribution for each row.\n",
-        "\"\"\"\n",
-        "P[0]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XS9CQUgYAoks",
-        "outputId": "0f542f2a-95e0-4189-d443-2e5e84f0db85"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0.0000, 0.1377, 0.0408, 0.0481, 0.0528, 0.0478, 0.0130, 0.0209, 0.0273,\n",
-              "        0.0184, 0.0756, 0.0925, 0.0491, 0.0792, 0.0358, 0.0123, 0.0161, 0.0029,\n",
-              "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "p"
-      ],
-      "metadata": {
-        "id": "z2CYcxBmcoXD",
-        "outputId": "b52079e4-fbe4-4346-c491-4648fd7264a5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0.0000, 0.1377, 0.0408, 0.0481, 0.0528, 0.0478, 0.0130, 0.0209, 0.0273,\n",
-              "        0.0184, 0.0756, 0.0925, 0.0491, 0.0792, 0.0358, 0.0123, 0.0161, 0.0029,\n",
-              "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "execution_count": 56
         }
       ]
     },
@@ -479,13 +415,13 @@
       ],
       "metadata": {
         "id": "MdSKtGadbXku",
-        "outputId": "4beede38-95cc-40f0-d307-c08ff23cc758",
+        "outputId": "b8e237df-8d21-48c3-d8f6-f1987c1fd625",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 17,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +434,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 59
         }
       ]
     },
@@ -512,12 +448,12 @@
       ],
       "metadata": {
         "id": "FFlK641RavIn",
-        "outputId": "566c09da-a2ff-40ed-f90c-24e756b07c41",
+        "outputId": "aa081ed5-4670-4565-9347-dda6ad4eb4bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 60
         }
       ]
     },
@@ -538,12 +474,12 @@
       ],
       "metadata": {
         "id": "T6s2VRSaXcX3",
-        "outputId": "ab498bdd-64c5-42ea-bc41-aad9a149965d",
+        "outputId": "61f8a810-d9e7-42a9-e37e-0d6f1b87ede3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +493,43 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P = N.float()\n",
+        "P_rows_sum = P.sum(1, keepdims=True) # Sums all values in each rows, keeps the dimention same (for broadcasting >important<)\n",
+        "P /= P_rows_sum # Divides the each value (number of occurance) in the tensor by the P_rows_sum: sum of the each row individually.\n",
+        "\n",
+        "\"\"\"\n",
+        "This is what we've done previousl, but this time we did it to each row.\n",
+        "We now have a probability distribution for each row.\n",
+        "\"\"\"\n",
+        "P[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XS9CQUgYAoks",
+        "outputId": "c9304c86-b328-4854-9550-4fbdef569849"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0000, 0.1377, 0.0408, 0.0481, 0.0528, 0.0478, 0.0130, 0.0209, 0.0273,\n",
+              "        0.0184, 0.0756, 0.0925, 0.0491, 0.0792, 0.0358, 0.0123, 0.0161, 0.0029,\n",
+              "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
         }
       ]
     },
@@ -569,8 +541,7 @@
         "out = []\n",
         "ix = 0\n",
         "while True:\n",
-        "  p = N[ix].float()\n",
-        "  p = p / p.sum()\n",
+        "  p = P[ix]\n",
         "  ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
         "  out.append(itos[ix])\n",
         "  if ix == 0:\n",
@@ -580,12 +551,12 @@
       ],
       "metadata": {
         "id": "MYxqwkR-bU94",
-        "outputId": "b4e4e474-72ae-4216-cfc8-1d794c854363",
+        "outputId": "091d8636-8c4a-4162-fc11-ea6d9464df99",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,8 +576,7 @@
         "  out = []\n",
         "  ix = 0\n",
         "  while True:\n",
-        "    p = N[ix].float()\n",
-        "    p = p / p.sum()\n",
+        "    p = P[ix]\n",
         "    ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
         "    out.append(itos[ix])\n",
         "    if ix == 0:\n",
@@ -616,12 +586,12 @@
       ],
       "metadata": {
         "id": "gHajH6IJdOzH",
-        "outputId": "64ad2ca9-5c0e-453f-8659-be68939115a8",
+        "outputId": "e0b6275c-cf8e-4795-8914-7ce4c0477590",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,6 +622,63 @@
       "metadata": {
         "id": "fjoyltyDAJEx"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loss Function (The Negative Likelyhood)"
+      ],
+      "metadata": {
+        "id": "QQ8pBVrRtt05"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_likelihood = 0.0\n",
+        "n = 0\n",
+        "\n",
+        "for w in words[:1]:\n",
+        "  chs = ['.'] + list(w) + ['.']\n",
+        "  for ch1, ch2 in zip(chs, chs[1:]):\n",
+        "    ix1 = stoi[ch1]\n",
+        "    ix2 = stoi[ch2]\n",
+        "\n",
+        "    prob = P[ix1, ix2]\n",
+        "    logprob = torch.log(prob)\n",
+        "    log_likelihood += logprob\n",
+        "    n += 1\n",
+        "    print(f\"P '{ch1}{ch2}' = {prob:.4f}, Log(P) = {logprob:.4f}\")\n",
+        "\n",
+        "nll = -log_likelihood\n",
+        "normalized_nll = -log_likelihood / n\n",
+        "\n",
+        "print(f'Negative log likelihood: {nll=}')\n",
+        "print(f'Normalized Negative Log Likelihood: {normalized_nll=}')"
+      ],
+      "metadata": {
+        "id": "0WUeDsJsweAa",
+        "outputId": "b0153c16-9198-4a18-a082-1a374f9b7021",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P '.e' = 0.0478, Log(P) = -3.0408\n",
+            "P 'em' = 0.0377, Log(P) = -3.2793\n",
+            "P 'mm' = 0.0253, Log(P) = -3.6772\n",
+            "P 'ma' = 0.3899, Log(P) = -0.9418\n",
+            "P 'a.' = 0.1960, Log(P) = -1.6299\n",
+            "Negative log likelihood: nll=tensor(12.5690)\n",
+            "Normalized Negative Log Likelihood: normalized_nll=tensor(2.5138)\n"
+          ]
+        }
+      ]
     }
   ]
 }
