--- a/makemore.ipynb
+++ b/makemore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMfn57hm768YAJl7qrCk4y",
+      "authorship_tag": "ABX9TyOf1cku1s4gJGQu0fuC5gTY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "2aZ4S-goqKne"
       },
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HvmXTrbV5RxI",
-        "outputId": "70f03b65-7dcc-4e87-bf0d-1720f4269e33"
+        "outputId": "35b57606-af35-4809-d2f4-6b018c9c1330"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -91,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uwd4zR-Q5opx",
-        "outputId": "fca807aa-5610-4738-9fb2-0234d2a9b95b"
+        "outputId": "165d0002-60ad-4538-9346-e36880d6b394"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 7
         }
       ]
     },
@@ -119,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zj3mmTLQ5pzR",
-        "outputId": "a82bf113-3d8b-4aa1-d423-de3da7630d1e"
+        "outputId": "64e989ac-7a23-4c56-f7d8-60bf2ede6ed2"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "tYsJmiOQ8Zdo"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJ6xDTll-wOX",
-        "outputId": "a636f6b4-6b97-43f5-d0ff-7220d5f2c5c9"
+        "outputId": "6cb805dc-7305-4bfd-8cbb-c1bb7a68baad"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 10
         }
       ]
     },
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "5K-amPMjAkjp"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "KWyrakIV_GK5"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b19a350b-ddba-4ddc-d3a4-6e73ee88926d"
+        "outputId": "a28db1c0-732c-4f8f-9a9c-57ca015d8fe9"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -279,7 +279,7 @@
       "metadata": {
         "id": "nltKQvpwBkQH"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -305,9 +305,9 @@
           "height": 1000
         },
         "id": "7MuEl1tNCpDy",
-        "outputId": "f2b46451-9709-44c3-df9f-9d4a664d271f"
+        "outputId": "d9be2623-b305-42d1-bc9b-3ae9a36b0eaf"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKGirjJlwmEQ",
-        "outputId": "f34f32a0-8697-42eb-feaf-91c7b8b2d72b"
+        "outputId": "2f803630-61f0-446c-dfab-b601469452db"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 16
         }
       ]
     },
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGQaoEBB-YUt",
-        "outputId": "edefe273-22c6-4397-f18b-261eb573dc50"
+        "outputId": "f293836e-9344-4b1f-cdd1-ec187407083b"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 17
         }
       ]
     },
@@ -387,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gAXKxf6yaL2",
-        "outputId": "0d38d987-5839-4b22-e418-32dd1778ce3c"
+        "outputId": "d071c614-bde9-40d9-d685-a95c27fb9220"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 18
         }
       ]
     },
@@ -415,13 +415,13 @@
       ],
       "metadata": {
         "id": "MdSKtGadbXku",
-        "outputId": "2b9177ab-640b-4745-d687-6f437d51cbce",
+        "outputId": "d41401dd-7759-41ab-c647-6f5b28277540",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +434,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 19
         }
       ]
     },
@@ -448,12 +448,12 @@
       ],
       "metadata": {
         "id": "FFlK641RavIn",
-        "outputId": "4bee99dc-0c14-49f8-fbbe-627810219e60",
+        "outputId": "3e8165ef-37f3-437f-bbcf-de11110dab60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 20
         }
       ]
     },
@@ -474,12 +474,12 @@
       ],
       "metadata": {
         "id": "T6s2VRSaXcX3",
-        "outputId": "cf2f9815-771d-489d-c822-ed46361ccbfb",
+        "outputId": "8cd0c029-454d-4929-fe5e-cbc219eb8acb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 21
         }
       ]
     },
@@ -515,9 +515,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XS9CQUgYAoks",
-        "outputId": "c3fd1e68-9fe6-4d6e-f517-78757e8bde20"
+        "outputId": "9409be36-e247-46c2-c93e-185a0df7bf5d"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +531,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 22
         }
       ]
     },
@@ -553,12 +553,12 @@
       ],
       "metadata": {
         "id": "MYxqwkR-bU94",
-        "outputId": "f6f6bb92-4f8f-48ec-9e55-91600a52cf54",
+        "outputId": "119eb4dc-a35a-4f29-9277-cbbef7840826",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,12 +588,12 @@
       ],
       "metadata": {
         "id": "gHajH6IJdOzH",
-        "outputId": "8a52ead7-3d84-4a62-f7de-1edf97085edc",
+        "outputId": "320faaa4-5174-4dca-a8ba-c0fc448929d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Training the Bigram"
+        "## Loss Function and Neural Net"
       ],
       "metadata": {
         "id": "QQ8pBVrRtt05"
@@ -662,12 +662,12 @@
       ],
       "metadata": {
         "id": "0WUeDsJsweAa",
-        "outputId": "945f7041-aeb4-43cb-e962-a59ef37fac6f",
+        "outputId": "cbce0f04-8015-4163-8f04-645f2d7caf43",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,12 +706,12 @@
       ],
       "metadata": {
         "id": "tEvO4mccuHpZ",
-        "outputId": "27ad3cdf-e6f0-4159-ae1a-21e7330b9069",
+        "outputId": "62fa8ebc-c378-4b05-ae45-cb85c7a0b51a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 26
         }
       ]
     },
@@ -734,12 +734,12 @@
       ],
       "metadata": {
         "id": "PwhNVHBIwzIV",
-        "outputId": "0968b587-8859-4e18-e0cd-03dd81a51c82",
+        "outputId": "98e13c8b-a938-49c0-fff7-5db5ba3012c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +758,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 27
         }
       ]
     },
@@ -769,23 +769,23 @@
       ],
       "metadata": {
         "id": "j3Ns_ENNxMx1",
-        "outputId": "8125e890-9f0c-4e10-b978-dafb33bca3dd",
+        "outputId": "2bfb8531-b434-4425-ebe6-a3b30d9d87c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 169
         }
       },
-      "execution_count": 39,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7a427d129a20>"
+              "<matplotlib.image.AxesImage at 0x7bac34a7bb20>"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -798,6 +798,232 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xenc.dtype, xs.dtype, ys.dtype"
+      ],
+      "metadata": {
+        "id": "-HAr7AbVBi1m",
+        "outputId": "7c447045-8a1d-4cf2-ef84-53a050feb330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.float32, torch.int64, torch.int64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "W = torch.randn((27, 27))\n",
+        "xenc @ W"
+      ],
+      "metadata": {
+        "id": "ngqmiTxmCJau",
+        "outputId": "0dd4102c-3fd0-41ec-a02b-d64d5096b293",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.5038,  0.2715,  1.2524,  0.5201, -0.0050,  0.1554,  0.9859, -1.0681,\n",
+              "          0.6516, -1.1255, -0.2799,  0.2817,  0.1475, -1.5288,  0.4462, -1.7349,\n",
+              "          0.1077, -2.0432, -0.0595, -0.2233, -1.3509,  0.7202, -1.4106,  1.0666,\n",
+              "          0.4057,  1.2897,  0.9888],\n",
+              "        [-1.0736, -1.5305, -1.1166,  1.5802,  0.4859, -1.0777, -1.5621,  0.3475,\n",
+              "          0.4199,  0.3340, -0.1528, -1.7821,  0.1217, -0.3695,  2.2798,  1.3011,\n",
+              "         -1.3263,  0.7730, -0.0768, -0.0101, -0.6895,  0.9497,  1.4029,  1.2980,\n",
+              "          0.2127,  0.2261, -0.4098],\n",
+              "        [-1.0001,  2.2527, -0.8776,  0.2039, -1.3037, -1.7637,  0.7520,  0.4955,\n",
+              "         -0.8900,  0.7149,  0.4879, -0.7699, -0.1439, -1.0262, -1.7788, -1.3554,\n",
+              "          0.2149,  1.3967, -0.0572,  0.2588,  1.3654,  1.1618, -0.1293, -2.4166,\n",
+              "         -1.8482,  1.2347, -1.0374],\n",
+              "        [-1.0001,  2.2527, -0.8776,  0.2039, -1.3037, -1.7637,  0.7520,  0.4955,\n",
+              "         -0.8900,  0.7149,  0.4879, -0.7699, -0.1439, -1.0262, -1.7788, -1.3554,\n",
+              "          0.2149,  1.3967, -0.0572,  0.2588,  1.3654,  1.1618, -0.1293, -2.4166,\n",
+              "         -1.8482,  1.2347, -1.0374],\n",
+              "        [ 1.3763, -0.1355,  0.2712, -0.5943, -0.8241,  0.5834, -1.0876,  0.6785,\n",
+              "         -0.4999, -0.9749,  2.0686,  0.1736,  2.7087,  2.6459, -0.2256,  0.0249,\n",
+              "         -1.4178, -1.6439, -0.5558, -2.0200, -1.3155, -1.2627, -1.7746, -0.0343,\n",
+              "         -1.3623,  0.7439, -0.0286]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(xenc @ W)[3,13]"
+      ],
+      "metadata": {
+        "id": "l7Xukp8nCYN5",
+        "outputId": "cd6e3c58-b80d-460e-ba72-7f3d19c3c1ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(-1.0262)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "W[:, 13]"
+      ],
+      "metadata": {
+        "id": "osIKwnZmELk5",
+        "outputId": "b8686bda-bc2e-49b4-8cf3-9e431ce2779c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-1.5288e+00,  2.6459e+00,  3.2759e-02, -2.3234e+00,  1.7136e-01,\n",
+              "        -3.6955e-01, -1.1099e+00, -5.3006e-01, -9.3133e-01,  8.9827e-01,\n",
+              "        -2.5575e-01,  1.5680e+00, -6.9423e-01, -1.0262e+00,  8.5780e-01,\n",
+              "         1.5240e+00, -6.4272e-01, -3.4806e-01,  5.8900e-01, -1.4914e+00,\n",
+              "         3.5605e-04, -5.7640e-02,  1.0251e+00, -5.9992e-02,  2.1824e-01,\n",
+              "        -2.2691e+00, -1.6693e+00])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xenc[3]"
+      ],
+      "metadata": {
+        "id": "GHsem-6xEHKf",
+        "outputId": "6c08592b-ede3-4d26-f22e-79f2249669da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(xenc[3] * W[:, 13]).sum()"
+      ],
+      "metadata": {
+        "id": "9KW3BAfrD4ry",
+        "outputId": "e6bb0a52-5b9e-4fda-ec74-746d29ddf98f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(-1.0262)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = xenc @ W # Log-counts\n",
+        "\n",
+        "#----------Softmax:\n",
+        "counts = logits.exp() # Counts, equvalent to N.\n",
+        "probs = counts / counts.sum(1, keepdims=True) # Probabilities for the next character.\n",
+        "#----------\n",
+        "\n",
+        "probs[0] # Result will look like this (a prob dist.) for single input ('.') after we train our neural net."
+      ],
+      "metadata": {
+        "id": "N4mTVJr8GKp4",
+        "outputId": "f0164e73-943f-41b7-b710-28e30298e417",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0089, 0.2294, 0.0100, 0.0296, 0.0065, 0.0041, 0.0511, 0.0396, 0.0099,\n",
+              "        0.0493, 0.0393, 0.0112, 0.0209, 0.0086, 0.0041, 0.0062, 0.0299, 0.0974,\n",
+              "        0.0228, 0.0312, 0.0944, 0.0770, 0.0212, 0.0022, 0.0038, 0.0829, 0.0085])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training the Neural Net"
+      ],
+      "metadata": {
+        "id": "PryoGmCYI0TY"
+      }
     }
   ]
 }
