--- a/makemore_mlp.ipynb
+++ b/makemore_mlp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9DFnwj6lmZ7e+GRB3JDAz",
+      "authorship_tag": "ABX9TyOTRgTqxeE53FIlGctkxnoB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "Phzkl8zsXaIe"
       },
@@ -48,22 +48,24 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 159
         },
         "id": "FRyGoWkZdEEt",
-        "outputId": "f2477ea0-798e-47ca-8c8c-368a3ecb18a6"
+        "outputId": "7a831417-5c1b-4130-cef3-e348987ec5eb"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['emma', 'olivia', 'ava', 'isabella', 'sophia']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'names.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-f0a937ba9f72>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"names.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'names.txt'"
+          ]
         }
       ]
     },
@@ -78,22 +80,10 @@
         "print(itos)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PaMjwUoRdUFF",
-        "outputId": "e502dd1d-4d0a-45ba-b790-0046a87b9cd7"
+        "id": "PaMjwUoRdUFF"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -118,63 +108,10 @@
         "Y = torch.tensor(Y)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f9Eu3Rp6de7p",
-        "outputId": "56a3b83b-f042-426e-a879-aa64e55f10a2"
+        "id": "f9Eu3Rp6de7p"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            " emma\n",
-            "... ---> e\n",
-            "..e ---> m\n",
-            ".em ---> m\n",
-            "emm ---> a\n",
-            "mma ---> .\n",
-            "\n",
-            " olivia\n",
-            "... ---> o\n",
-            "..o ---> l\n",
-            ".ol ---> i\n",
-            "oli ---> v\n",
-            "liv ---> i\n",
-            "ivi ---> a\n",
-            "via ---> .\n",
-            "\n",
-            " ava\n",
-            "... ---> a\n",
-            "..a ---> v\n",
-            ".av ---> a\n",
-            "ava ---> .\n",
-            "\n",
-            " isabella\n",
-            "... ---> i\n",
-            "..i ---> s\n",
-            ".is ---> a\n",
-            "isa ---> b\n",
-            "sab ---> e\n",
-            "abe ---> l\n",
-            "bel ---> l\n",
-            "ell ---> a\n",
-            "lla ---> .\n",
-            "\n",
-            " sophia\n",
-            "... ---> s\n",
-            "..s ---> o\n",
-            ".so ---> p\n",
-            "sop ---> h\n",
-            "oph ---> i\n",
-            "phi ---> a\n",
-            "hia ---> .\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -182,25 +119,10 @@
         "X.shape, X.dtype, Y.shape, Y.dtype"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M6zmyzcnp69E",
-        "outputId": "2fde01db-c5e2-4bd1-9e7a-de887a401d1f"
+        "id": "M6zmyzcnp69E"
       },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([32, 3]), torch.int64, torch.Size([32]), torch.int64)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -209,25 +131,10 @@
         "C[5]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fzGOmu2xp5I8",
-        "outputId": "2e262d84-5496-48cb-c61f-c779d7b5b8ea"
+        "id": "fzGOmu2xp5I8"
       },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([ 2.0395, -0.8465])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -236,25 +143,10 @@
         "emb.shape"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DJdyxNsaqVa2",
-        "outputId": "dd2ec070-bc48-423d-80a9-43f11763f3df"
+        "id": "DJdyxNsaqVa2"
       },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 3, 2])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 45
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -265,7 +157,7 @@
       "metadata": {
         "id": "gDyJhUsnqitH"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +168,7 @@
       "metadata": {
         "id": "7frrrRrrs7vQ"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,31 +177,10 @@
         "h"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CtsBwyFcvzFV",
-        "outputId": "1ba6ba77-e13a-450e-81f9-67c90ae01140"
+        "id": "CtsBwyFcvzFV"
       },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[ 0.4159, -1.0000,  0.9988,  ...,  0.7225,  0.5152, -0.8256],\n",
-              "        [ 0.9226, -1.0000,  0.9995,  ..., -0.7251,  0.1894,  0.1682],\n",
-              "        [-0.9899, -0.9999,  0.9671,  ...,  1.0000,  0.9461, -1.0000],\n",
-              "        ...,\n",
-              "        [-0.9860,  0.7724,  0.9903,  ...,  0.7523,  0.9649, -1.0000],\n",
-              "        [-0.9587, -0.2467,  0.9622,  ..., -0.8192,  0.9270,  0.9932],\n",
-              "        [-0.9518, -0.7895, -1.0000,  ...,  0.9980, -0.9115,  0.7281]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 50
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -317,25 +188,10 @@
         "h.shape"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UqyfQy9AwIli",
-        "outputId": "409a9569-69ac-4d6a-87ef-d2e49e1f8f6e"
+        "id": "UqyfQy9AwIli"
       },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 100])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 53
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -346,7 +202,7 @@
       "metadata": {
         "id": "-OaMU3JMwSS8"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +213,7 @@
       "metadata": {
         "id": "hNeMTLotwS_P"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,25 +222,10 @@
         "logits.shape"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "J2cYXwKvwXbE",
-        "outputId": "94adda18-43a1-496d-ee72-cb21f7384d62"
+        "id": "J2cYXwKvwXbE"
       },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 27])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 56
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -394,7 +235,7 @@
       "metadata": {
         "id": "ZJ1X-h6lwY9T"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +246,7 @@
       "metadata": {
         "id": "g8cF_zbnwcCB"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,29 +255,16 @@
         "prob.shape"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wCKOvAeowiAs",
-        "outputId": "026159a1-5b22-4e2e-ceb6-ec1a4044a92d"
+        "id": "wCKOvAeowiAs"
       },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 27])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# There is an exam tomorrow :/"
+      ],
       "metadata": {
         "id": "54BAD6_Fwjjw"
       },
