--- a/makemore_mlp.ipynb
+++ b/makemore_mlp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTRgTqxeE53FIlGctkxnoB",
+      "authorship_tag": "ABX9TyMXz3I6UI9hYqQMaH959itC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,24 +48,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
+          "base_uri": "https://localhost:8080/"
         },
         "id": "FRyGoWkZdEEt",
-        "outputId": "7a831417-5c1b-4130-cef3-e348987ec5eb"
+        "outputId": "464e2957-4673-47d3-82d6-69ccdfceae2f"
       },
       "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'names.txt'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-f0a937ba9f72>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"names.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'names.txt'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['emma', 'olivia', 'ava', 'isabella', 'sophia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     },
@@ -80,10 +78,22 @@
         "print(itos)"
       ],
       "metadata": {
-        "id": "PaMjwUoRdUFF"
+        "id": "PaMjwUoRdUFF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02f61515-fda8-4e56-c437-5756b20ec0b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -108,168 +118,164 @@
         "Y = torch.tensor(Y)"
       ],
       "metadata": {
-        "id": "f9Eu3Rp6de7p"
+        "id": "f9Eu3Rp6de7p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "346f7eee-917b-4f31-d4de-18fa5ff79772"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " emma\n",
+            "... ---> e\n",
+            "..e ---> m\n",
+            ".em ---> m\n",
+            "emm ---> a\n",
+            "mma ---> .\n",
+            "\n",
+            " olivia\n",
+            "... ---> o\n",
+            "..o ---> l\n",
+            ".ol ---> i\n",
+            "oli ---> v\n",
+            "liv ---> i\n",
+            "ivi ---> a\n",
+            "via ---> .\n",
+            "\n",
+            " ava\n",
+            "... ---> a\n",
+            "..a ---> v\n",
+            ".av ---> a\n",
+            "ava ---> .\n",
+            "\n",
+            " isabella\n",
+            "... ---> i\n",
+            "..i ---> s\n",
+            ".is ---> a\n",
+            "isa ---> b\n",
+            "sab ---> e\n",
+            "abe ---> l\n",
+            "bel ---> l\n",
+            "ell ---> a\n",
+            "lla ---> .\n",
+            "\n",
+            " sophia\n",
+            "... ---> s\n",
+            "..s ---> o\n",
+            ".so ---> p\n",
+            "sop ---> h\n",
+            "oph ---> i\n",
+            "phi ---> a\n",
+            "hia ---> .\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "X.shape, X.dtype, Y.shape, Y.dtype"
+        "X.shape, X.dtype, Y.shape, Y.dtype # Dataset"
       ],
       "metadata": {
-        "id": "M6zmyzcnp69E"
+        "id": "M6zmyzcnp69E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98d07370-286c-4532-a379-f6cce82df49c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([32, 3]), torch.int64, torch.Size([32]), torch.int64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "C = torch.randn((27,2))\n",
-        "C[5]"
+        "g = torch.Generator().manual_seed(2147483647)\n",
+        "C = torch.randn((27, 2), generator=g)\n",
+        "W1 = torch.randn((6, 100), generator=g)\n",
+        "b1 = torch.randn(100, generator=g)\n",
+        "W2 = torch.randn((100, 27), generator=g)\n",
+        "b2 = torch.randn(27, generator=g)\n",
+        "parameters = [C, W1, b1, W2, b2]"
       ],
       "metadata": {
         "id": "fzGOmu2xp5I8"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "emb = C[X]\n",
-        "emb.shape"
+        "sum(p.nelement() for p in parameters)"
       ],
       "metadata": {
-        "id": "DJdyxNsaqVa2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uBNHYzNlmcf7",
+        "outputId": "61ed8bab-5954-4db2-edaf-4692c0fd3594"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3481"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "W1 = torch.randn((6,100))\n",
-        "b1 = torch.randn(100)"
+        "emb = C[X] #(32, 3, 2)\n",
+        "h = torch.tanh(emb.view(-1, 6) @ W1 + b1) # (32, 100)\n",
+        "logits = h @ W2 + b2\n",
+        "counts = logits.exp()\n",
+        "prob = counts / counts.sum(1, keepdims=True)\n",
+        "loss = -prob[torch.arange(32), Y].log().mean()\n",
+        "loss"
       ],
       "metadata": {
-        "id": "gDyJhUsnqitH"
+        "id": "DJdyxNsaqVa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "111c5fa9-36c2-4c46-cc31-8a7221a5b0da"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "h = torch.tanh(emb.view(-1, 6) @ W1 + b1)"
-      ],
-      "metadata": {
-        "id": "7frrrRrrs7vQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "h"
-      ],
-      "metadata": {
-        "id": "CtsBwyFcvzFV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "h.shape"
-      ],
-      "metadata": {
-        "id": "UqyfQy9AwIli"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "W2 = torch.randn((100,27))\n",
-        "b2 = torch.randn(27)"
-      ],
-      "metadata": {
-        "id": "-OaMU3JMwSS8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "logits = h @ W2 + b2"
-      ],
-      "metadata": {
-        "id": "hNeMTLotwS_P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "logits.shape"
-      ],
-      "metadata": {
-        "id": "J2cYXwKvwXbE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "counts = logits.exp()"
-      ],
-      "metadata": {
-        "id": "ZJ1X-h6lwY9T"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "prob = counts / counts.sum(1, keepdims=True)"
-      ],
-      "metadata": {
-        "id": "g8cF_zbnwcCB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "prob.shape"
-      ],
-      "metadata": {
-        "id": "wCKOvAeowiAs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# There is an exam tomorrow :/"
-      ],
-      "metadata": {
-        "id": "54BAD6_Fwjjw"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(17.7697)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
